NHS Web Content

--- a/Contact Us.html
+++ b/Contact Us.html
@@ -32,15 +32,24 @@
 		<div class="content">
 			<div class="container">
 				<div class="main">
+                    <ul class="breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Contact%20Us.html">Contact Us</a></li>
+                    </ul>
                     <h1>Contact Us</h1>
 					<img src="assets/img/Contact%201.png" class="img-responsive">
                     <hr>
-                    <img src="assets/img/Contact%202.png" class="img-responsive">
-                    <hr>
 					<!-- Paragraphs -->
 					<h3>How to contact Us</h3>
-					<p>Ut wisi enim ad minim veniam,  suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-					<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+					<p>Members of the public, patients, and their representatives should contact our Customer Contact Centre.</p>
+                    
+					<p>You can contact us by:</p>
+                    <p><b>Telephone:</b> 0300 311 22 33</p>
+                    <p><b>Email: </b><a href="england.contactus@nhs.net"><span>england.contactus@nhs.net</span></a></p>
+                    <p><b>General Post (including complaints):</b>NHS England, PO Box 16738, Redditch, B97 9PT</p>
+                    <p><b>Address for service of legal proceedings and formal letters of claim:</b> NHS England, Legal Team, 4W08  4th Floor, Quarry House, Leeds LS2 7UE</p>
+                    <p><b>British Sign Language (BSL): </b>If you use BSL, you can to talk to us via a video call to a BSL interpreter. Visit NHS England’s BSL Service.</p>
+                    <p><b>Our opening hours are:</b> 8am to 6pm Monday to Friday, except Wednesdays when we open at the later time of 9.30am.</p>
 					<hr>
 				</div>
 				<div class="aside">
@@ -49,7 +58,6 @@
    <li><a href='Healthy%20Living.html'><span>Healthy Living</span></a></li>
    <li><a href='Prehabilitation.html'><span>Prehabilitation</span></a></li>
    <li><a href='Care%20and%20Support.html'><span>Care and Support</span></a></li>
-   <li><a href='Smokefree.html'><span>Smokefree</span></a></li>  
    </ul>
    </div>
 				</div>
@@ -72,13 +80,13 @@
 Other NHS Website Links  
 				<p class="footer-links">
                   	 
-					<a href="https://www.england.nhs.uk/">NHS England</a>
+				    <a href="https://www.england.nhs.uk/">NHS England</a>
 					·
-					<a href="https://www.nhsinform.scot/">NHS Scotland</a>
+					<a href="http://www.nhs.uk/pages/home.aspx">NHS Choices</a>
 					·
-					<a href="http://online.hscni.net/">NHS Northen Ireland</a>
+					<a href="https://www.nhs.uk/smokefree">NHS Smokefree</a>
 					·
-					<a href="http://www.nhsdirect.wales.nhs.uk/">NHS Wales</a>
+					<a href="http://www.uhnm.nhs.uk/OurServices/pages/UpperGastrointestinalSurgery.aspx">NHS UHNM</a>
 				</p>
 
 				<p>NHS &copy; 2017</p>
