--- a/About Us.html
+++ b/About Us.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="header">
 			<div class="container">
-				<img src="assets/img/NHS-RGB.jpg" class="NHS">
+				<img src="assets/img/NHS%20Trust%20Midlands.jpg"" class="NHS">
 			</div>
 		</div>
 		<div class="nav-bar">
