--- a/Care and Support.html
+++ b/Care and Support.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="header">
 			<div class="container">
-				<img src="assets/img/NHS-RGB.jpg" class="NHS">
+				<img src="assets/img/NHS%20Trust%20Midlands.jpg"" class="NHS">
 			</div>
 		</div>
 		<div class="nav-bar">
@@ -42,15 +42,15 @@
 					<hr>
 
 					<!-- Paragraphs -->
-					<h3>What is care and support services?</h3>
-					<p>Care and support services, also known as social care services, help people who are in need of practical support due to illness, disability, old age or a low income. </p>
-                    
-					<p>Care and support services could include having a personal assistant to help you around the home, structural changes to help you move around or manage in your house, or even an alarm system so that you can call for help if you have a fall.</p>
-                    
-                    <p>Social care services are available to everyone, regardless of their background.</p>
+					<h3>Care and support services</h3>
+                    <p>The NHS has got care and support services to help people who need support after surgery.</p>
+                    <p>The NHS can provide:</p>
+                    <li>Advice and support for care services</li>
+                    <li>Planning for your future care needs</li>
 					<hr>
-                     <h3>For more information about care and support services</h3>
+                     <h3>If you need to find more information about care and support services then</h3>
                     <p>Visit <a href="http://www.nhs.uk/Conditions/social-care-and-support-guide/Pages/what-is-social-care.aspx"><span>NHS Care and Support</span></a></p>
+                    <p>Or ask the clinical healthcare nurse for more information about care and support.</p>
 					<hr>
 				</div>
 				<div class="aside">
