--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="header">
 			<div class="container">
-				<img src="assets/img/NHS-RGB.jpg" class="NHS">
+				<img src="assets/img/NHS%20Trust%20Midlands.jpg" class="NHS">
 			</div>
 		</div>
 		<div class="nav-bar">
@@ -34,14 +34,13 @@
 			<div class="container">
 				<div class="main">
                          
-					<h1>Welcome to Upper-Gastrointestinal Support</h1>
+					<h1>Welcome To The Support Page For Upper-Gastrointestinal Patients</h1>
                     <img src="assets/img/NHSWelcomeImage.jpg" class="img-responsive">
-                    <p>This is a website that has been created by the UHNM, to give you helpful advice and useful information on how to stay fit and healthy before and after UGI surgery.</p>
+                    <p>This is a website that has been created on behalf of the University Hospitals of North Midlands, to give you helpful advice and useful information on how to stay fit and healthy before your upper-gastrointestinal operation. We also have an app called NHS UGI Surgery Support that can be useful to help you prepare for your surgery.</p>
 					<hr>
-                    <h3>There is an Application that can be useful to help you in the prehabilitation process</h3>
-                    <img src="assets/img/TabletAppShowcase.png" class="img-responsive">
-                    <p>Having surgery can put a lot of significant amount of stress, and often will leave you feeling weak and tired, to improve your daily lifestyle routine</p>
-                    <p>Don't worry, there is an application that can help you to improve yourself, by giving you helpful useful information and diagrams to revamp on your healthy living lifestyle that can get you into the mood to be fit and healthy after surgery.</p>
+                    <h4>Do you want to improve your daily lifestyle routine, get healthier, and be prepared for surgery?</h4>
+                    <img src="assets/img/TabletAppShowcase.png" class="img-responsive">        
+                    <p>Don't worry,we have an app that can help you to improve yourself, by giving you helpful and useful information and advice to revamp your healthy living lifestyle.It aims to make you fitter and healthier, and get you in the best physical condition to cope with the effect surgery will have on your bodysurgery</p>
                     <h4>More information about the application can be found in the prehabilitation webpage</h4>
 				</div>
               
