--- a/Contact Us.html
+++ b/Contact Us.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="header">
 			<div class="container">
-				<img src="assets/img/NHS-RGB.jpg" class="NHS">
+				<img src="assets/img/NHS%20Trust%20Midlands.jpg"" class="NHS">
 			</div>
 		</div>
 		<div class="nav-bar">
@@ -48,7 +48,6 @@
                     <p><b>Email: </b><a href="england.contactus@nhs.net"><span>england.contactus@nhs.net</span></a></p>
                     <p><b>General Post (including complaints):</b>NHS England, PO Box 16738, Redditch, B97 9PT</p>
                     <p><b>Address for service of legal proceedings and formal letters of claim:</b> NHS England, Legal Team, 4W08  4th Floor, Quarry House, Leeds LS2 7UE</p>
-                    <p><b>British Sign Language (BSL): </b>If you use BSL, you can to talk to us via a video call to a BSL interpreter. Visit NHS England’s BSL Service.</p>
                     <p><b>Our opening hours are:</b> 8am to 6pm Monday to Friday, except Wednesdays when we open at the later time of 9.30am.</p>
 					<hr>
 				</div>
